syntax = "proto3";

package birdComm;

service bird_comm {
    rpc check_config(family) returns (conf_reply);
    rpc reload_config(family) returns (conf_reply);
}

message family {
    uint32 af = 1;
}

message conf_reply {
    string reply = 1;
    bool success = 2;
}

message peer {
    string name = 1;
    string description = 2;
    string address = 3;
    uint32 as = 4;
    string password = 5;
}

message peer_group {
    repeated peer group = 1;
}
